--- a/working-group/agendas/2020-04-28.md
+++ b/working-group/agendas/2020-04-28.md
@@ -28,6 +28,7 @@ This is an open meeting in which anyone in the GraphQL community may attend.
 | Sam Parsons              | PayPal/Braintree.              | Iowa, USA
 | Michael Staib            | ChilliCream                    | Zurich, Switzerland
 | Morris Matsa             | IBM                            | Boston, USA
+| Antoine Boyer            | AWS AppSync                    | Seattle, USA
 | *ADD YOUR NAME ABOVE TO ATTEND, ORDER BY ORG THEN NAME*
 
 ## Agenda
